add EventResponseDTO and EventViewDTO and remove another classes